# yyy-grandma

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/jinhun/: SKILL.md
.cursor/skills/jinhun/: SKILL.md
docs/: 2026_银发经济_经典老剧怀旧指南_完整版.md  jinhun_script_prompt.md  prompt_generation_guide.md
scripts/: check_duration.py  convert_t2s.py  download.py  extract_audio.py  extract_subs.py  fix_subs.py  produce_short_video.py  publish.py  wx_channel.py
series/jinhun/config/: jinhun01-Strategy.json  jinhun02-Strategy.json  jinhun03-Strategy.json  jinhun04-Strategy.json  jinhun05-Strategy.json  jinhun06-Strategy.json  jinhun07-Strategy.json  jinhun10-Strategy.json  jinhun11-Strategy.json  jinhun12-Strategy.json  jinhun13-Strategy.json  jinhun14-Strategy.json  jinhun15-Strategy.json  jinhun16-Strategy.json  jinhun17-Strategy.json  jinhun18-Strategy.json  《金婚》第01集-Strategy.json  《金婚》第02集-Strategy.json  《金婚》第03集-Strategy.json
